--- a/web/src/style.css
+++ b/web/src/style.css
@@ -2,34 +2,19 @@
 @plugin "daisyui";
 
 @plugin 'daisyui/theme' {
-    name: light;
+    name: corporate;
     default: true;
     prefersdark: false;
 }
 
 @plugin 'daisyui/theme' {
-    name: dark;
+    name: business;
     default: false;
     prefersdark: true;
+    --color-primary: #0082ce;
 }
 
 @utility container {
     margin-inline: auto;
-    padding-inline: 1rem;
-
-    @media (width >=theme(--breakpoint-sm)) {
-        padding-inline: 2rem;
-    }
-
-    @media (width >=theme(--breakpoint-lg)) {
-        padding-inline: 4rem;
-    }
-
-    @media (width >=theme(--breakpoint-xl)) {
-        padding-inline: 5rem;
-    }
-
-    @media (width >=theme(--breakpoint-2xl)) {
-        padding-inline: 6rem;
-    }
+    padding: 2rem 1rem;
 }
